syntax = "proto3";
package kvs.kvs;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "kvs/kvs/params.proto";
import "kvs/kvs/data.proto";
// this line is used by starport scaffolding # 1

option go_package = "kvs/x/kvs/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/kvs/kvs/params";
  }
  // Queries a Data by index.
	rpc Data(QueryGetDataRequest) returns (QueryGetDataResponse) {
		option (google.api.http).get = "/kvs/kvs/data/{index}";
	}

	// Queries a list of Data items.
	rpc DataAll(QueryAllDataRequest) returns (QueryAllDataResponse) {
		option (google.api.http).get = "/kvs/kvs/data";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetDataRequest {
	  string index = 1;

}

message QueryGetDataResponse {
	Data data = 1 [(gogoproto.nullable) = false];
}

message QueryAllDataRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllDataResponse {
	repeated Data data = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
